--- a/webapp/samridhdhi/templates/ui/communitymobilizer.html
+++ b/webapp/samridhdhi/templates/ui/communitymobilizer.html
@@ -13,13 +13,13 @@
     <title> SAMRIDHDHI STUDENT INFORMATION</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{%static 'css/bootstrap.min.css '%}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="{%static 'css/sb-admin.css '%}" rel="stylesheet">
+    <link href="{% static 'css/sb-admin.css' %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="{%static 'font-awesome/css/font-awesome.min.css '%}" rel="stylesheet" type="text/css">
+    <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -84,7 +84,7 @@
             <!-- /.navbar-collapse -->
         </nav>
 
-        <div id="page-wrapper">
+<!--         <div id="page-wrapper">
 
             <div class="container-fluid">
 
@@ -93,17 +93,17 @@
             </div>
             <!-- /.container-fluid -->
 
-        </div>
+        </div> -->
         <!-- /#page-wrapper -->
 
     </div>
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="{% static 'js/jquery.js' %}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
 </body>
 
