--- a/android app1/app/src/main/res/layout/activity_main.xml
+++ b/android app1/app/src/main/res/layout/activity_main.xml
@@ -124,6 +124,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:id="@+id/dAge"
+            android:inputType="number"
             android:layout_below="@+id/dMName"
             android:layout_toRightOf="@+id/Age"
             android:layout_toEndOf="@+id/Age"
@@ -368,6 +369,7 @@
             android:layout_height="30dp"
             android:id="@+id/dPinc"
             android:text="Rs."
+            android:inputType="number"
             android:layout_below="@+id/dNplc"
             android:layout_toRightOf="@+id/Pinc"
             android:layout_toEndOf="@+id/Pinc"
@@ -393,6 +395,7 @@
             android:layout_toRightOf="@+id/Altcno"
             android:layout_toEndOf="@+id/Altcno"
             android:layout_marginTop="5dp"
+            android:inputType="number"
             android:background="@drawable/b2"/>
 
         <TextView
@@ -416,6 +419,24 @@
             android:layout_toEndOf="@+id/IDprf"
             android:layout_marginTop="5dp"
             android:background="@drawable/b2"/>
+
+        <ImageView
+            android:id="@+id/Image"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_below="@+id/IDprf"
+            />
+
+        <Button
+            android:id="@+id/SelectPhoto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select Photo"
+            android:layout_marginTop="50dp"
+            android:layout_below="@+id/dIDprf"
+            android:layout_toRightOf="@+id/Image"
+            android:layout_marginLeft="20dp"/>
+
     </RelativeLayout>
 
 </ScrollView>
