--- a/android app1/app/src/main/res/drawable/b1.xml
+++ b/android app1/app/src/main/res/drawable/b1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
 
-    <solid android:color="#aaaaff" />
+    <solid android:color="#ababab" />
     <stroke android:width="2dip" android:color="#000000"/>
 
 </shape>
